# Twitter-Blocklist

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  dev-env.docker-compose.yml  package.json
.cargo/: config.toml
prisma/: schema.prisma
prisma/migrations/20220825165532_user_creation/: migration.sql
prisma/migrations/20220825171729_block_lists/: migration.sql
prisma/migrations/20220825172026_incoming_block/: migration.sql
prisma/src/: prisma.rs
