[package]
name = "twitter-blocklist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
serde = "1"
serde_json = "1"
serde_derive = "1"
csv = "1"
async-lock = "2"
chrono = "0.4"
rocket = "0.5.0-rc.2"
libmath = "0.2"
rsa = "0.6"
hex = "0.4"
base64 = "0.13"
openssl = "0.10"
openssl-sys = {version = "0.9", features = ["vendored"]}
tokio = { version = "1", features = ["full"] }
async-recursion = "1.0.0"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.5.3" }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.5.3" }

[alias]
prisma = "run -p prisma-cli --bin prisma-cli --"

[workspace]
members = [
    "prisma-cli",
]